<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App and activities names -->
    <string name="app_name">Daily Log Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_add_entry">Add Entry</string>
    <string name="action_help">Help</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="username">Your name</string>
    <string name="default_email">Default email</string>
    <string name="sharing">Sharing</string>
    <string name="formatting">Formatting</string>

    <string-array name="date_format_entries">
        <item>November 8, 2014</item>
        <item>Nov 8, 2014</item>
        <item>11/08/2014</item>
        <item>11/08/14</item>
        <item>2014/11/08</item>
        <item>08/11/2014</item>
        <item>08/11/14</item>
    </string-array>

    <string-array name="date_format_values">
        <item>MMMM d, yyyy</item>
        <item>MMM d, yyyy</item>
        <item>MM/dd/yyyy</item>
        <item>MM/dd/yy</item>
        <item>yyyy/MM/dd</item>
        <item>dd/MM/yyyy</item>
        <item>dd/MM/yy</item>
    </string-array>

    <!-- NewLog -->
    <string name="title_activity_new_log">New Log</string>
    <string name="tv_log_title">Title:</string>
    <string name="et_hint_title">Add your title here</string>
    <string name="tv_log_entry">Entry:</string>
    <string name="et_hint_entry">Enter you daily log here</string>
    <string name="action_save_title">Save</string>
    <string name="action_discard_title">Discard</string>
    <string name="action_photo_title">Add Photo</string>
    <string name="tv_job">Job Name:</string>
    <string name="et_job_hint">Enter Job name</string>
    <string name="log_canceled">Changes discarded</string>
    <string name="log_discarded">Log discarded</string>

    <string-array name="choose_add_photo">
        <item>Photos</item>
        <item>Camera</item>
    </string-array>

    <!-- Discard Dialog -->
    <string name="title_alert_discard">Discard</string>
    <string name="msg_alert_discard">Are you sure you want to discard?</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="send">Send</string>

    <!-- Help Dialog -->
    <string name="dialog_help_title">Information - scroll down</string>
    <string name="action_share">Share</string>
    <string name="action_mode_title">Select logs</string>
    <string name="selected">selected</string>

    <!-- Miscellaneous -->
    <string name="serial">Error with file…</string>
    <string name="no_logs">No logs have been created, click on the plus to get started</string>

    <string name="email_sig">Sent from Daily Log Keeper, for Android</string>

    <string name="oops">Oops!!!</string>

</resources>