<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imherolddev.dailylogkeeper.NewLogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_title"
        android:layout_below="@+id/tv_entry"
        android:ems="10"
        android:hint="@string/et_hint_entry"
        android:inputType="textMultiLine"
        android:textSize="@dimen/tv_text_size" />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_below="@+id/et_title"
        android:text="@string/tv_log_entry"
        android:textSize="@dimen/tv_text_size" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_entry"
        android:layout_below="@+id/tv_title"
        android:ems="10"
        android:hint="@string/et_hint_title"
        android:textSize="@dimen/tv_text_size" />

    <TextView
        android:id="@+id/tv_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_job"
        android:textSize="@dimen/tv_text_size" />

    <EditText
        android:id="@+id/et_job_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_job"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/et_job_hint"
        android:textSize="@dimen/tv_text_size">
    </EditText>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_job_name"
        android:layout_below="@+id/et_job_name"
        android:text="@string/tv_log_title"
        android:textSize="@dimen/tv_text_size" />

    </RelativeLayout>

</ScrollView>
