<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.imherolddev.dailylogkeeper.activities.NewLogActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="99"
        android:title="@string/action_save_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_photo"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:orderInCategory="98"
        android:title="@string/action_photo_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="97"
        android:title="@string/action_discard_title"
        app:showAsAction="ifRoom"/>

</menu>